--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/canvas.css" />
+	<link rel="stylesheet" href="assets/css/modal.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -22,8 +24,7 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<div id="header">
-
+		<div class="header_canvas" id="header">
 			<!-- Inner -->
 			<div class="inner">
 				<header>
@@ -32,7 +33,7 @@
 					<p>Para vivir con independencia y comodidad</p>
 				</header>
 				<footer>
-					<a id="movil" href="tel:+50242463482" class="button circled" title="(+502) 4246 - 3482" style="visibility:hidden">Llamar</a>
+					<a id="movil" href="tel:+50259176723" class="button circled" title="(+502) 5917 - 6723" style="visibility:hidden">Llamar</a>
 					<a id="desktop" href="#banner" class="button circled scrolly" style="visibility:hidden">Iniciar</a>
 				</footer>
 			</div>
@@ -65,81 +66,83 @@
 			<div class="reel">
 
 				<article>
-					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+					<a  class="image featured"><img src="images/pic01.jpg" id="myImg" onclick="modal(this)" alt="Area de comedor/cocina Commodo" /></a>
 					<header>
-						<h3><a href="#">Pulvinar sagittis congue</a></h3>
+						<h3><a >Area de comedor/cocina Commodo </a></h3>
+					</header>
+					<p>Modernos acabados de cemento liso</p>
+				</article>
+
+				<article>
+					<a  class="image featured"><img src="images/pic02.jpg" id="myImg" onclick="modal(this)" alt="Fermentum sagittis proin" /></a>
+					<header>
+						<h3><a >Fermentum sagittis proin</a></h3>
 					</header>
 					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 				</article>
 
 				<article>
-					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+					<a  class="image featured"><img src="images/pic03.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 					<header>
-						<h3><a href="#">Fermentum sagittis proin</a></h3>
+						<h3><a >Sed quis rhoncus placerat</a></h3>
 					</header>
 					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 				</article>
 
 				<article>
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+					<a  class="image featured"><img src="images/pic04.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 					<header>
-						<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+						<h3><a >Parqueo enfrente</a></h3>
+					</header>
+					<p>Espacio frente al complejo para vehículo.</p>
+				</article>
+
+				<article>
+					<a  class="image featured"><img src="images/pic05.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<header>
+						<h3><a >Varius magnis sollicitudin</a></h3>
 					</header>
 					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 				</article>
 
 				<article>
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+					<a  class="image featured"><img src="images/pic06.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 					<header>
-						<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+						<h3><a >Baño completo</a></h3>
+					</header>
+					<p>Finos accessorios sanitarios y azulejos.<br><br></p>
+				</article>
+
+				<article>
+					<a  class="image featured"><img src="images/pic07.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<header>
+						<h3><a >Comedor cocina del 201</a></h3>
+					</header>
+					<p></p>
+					<br>
+					<br>
+				</article>
+
+				<article>
+					<a  class="image featured"><img src="images/pic08.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<header>
+						<h3><a >Acceso 2do Nivel</a></h3>
+					</header>
+					<p>Cuenta con doble puerta de ingreso.<br><br></p>
+				</article>
+
+				<article>
+					<a  class="image featured"><img src="images/pic09.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<header>
+						<h3><a >Ultrices urna sit lobortis</a></h3>
 					</header>
 					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 				</article>
 
 				<article>
-					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+					<a  class="image featured"><img src="images/pic10.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 					<header>
-						<h3><a href="#">Varius magnis sollicitudin</a></h3>
-					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Pulvinar sagittis congue</a></h3>
-					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Fermentum sagittis proin</a></h3>
-					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Ultrices urna sit lobortis</a></h3>
-					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Varius magnis sollicitudin</a></h3>
+						<h3><a >Varius magnis sollicitudin</a></h3>
 					</header>
 					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 				</article>
@@ -168,17 +171,17 @@
 
 		<!-- Ubication -->
 		<div id="ubication" class="wrapper style1">
-			<section id="features" class="container special">
+			<section id="features" class="container special" >
 				
-				<a href="#" class="image featured">
+				<a href="#" class="image featured"  >
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1930.3320055803056!2d-90.5493462!3d14.6182061!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a1a30f206ae1%3A0xab70193d7e375f93!2sPulverizadora+Carabanchel+Zona+11!5e0!3m2!1ses-419!2sgt!4v1536208669524"
-					 width="100%" height="551" frameborder="0"></iframe>
+					 width="100%" height="551" frameborder="0" onclick="modalMap(this)"> holi</iframe>
 				</a>
 
 				<header>
-						<h2><a href="https://goo.gl/maps/zoqiABwXoJn">Ubicación</a></h2>
+						<h2><a href="https://goo.gl/maps/zoqiABwXoJn" target="_blank">Ubicación</a></h2>
 						<p>
-							Aqui la direccion...
+							16 avenida 5-73 Zona 11, Ciudad Guatemala
 						</p>
 					</header>
 			</section>
@@ -190,14 +193,14 @@
 
 			<section id="features" class="container special">
 				<header>
-					<h2>Morbi ullamcorper et varius leo lacus</h2>
-					<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+					<h2>Excelente ubicación</h2>
+					<p>Con acceso por la Roosvelt, la Aguilar Batres, y el Periférico</p>
 				</header>
 				<div class="row">
 					<article class="col-4 col-12-mobile special">
-						<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+						<a class="image featured"><img src="images/pic07.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 						<header>
-							<h3><a href="#">Gravida aliquam penatibus</a></h3>
+							<h3><a >Gravida aliquam penatibus</a></h3>
 						</header>
 						<p>
 							Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
@@ -205,9 +208,9 @@
 						</p>
 					</article>
 					<article class="col-4 col-12-mobile special">
-						<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+						<a  class="image featured"><img src="images/pic08.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 						<header>
-							<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+							<h3><a >Sed quis rhoncus placerat</a></h3>
 						</header>
 						<p>
 							Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
@@ -215,9 +218,9 @@
 						</p>
 					</article>
 					<article class="col-4 col-12-mobile special">
-						<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+						<a class="image featured"><img src="images/pic09.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 						<header>
-							<h3><a href="#">Magna laoreet et aliquam</a></h3>
+							<h3><a >Magna laoreet et aliquam</a></h3>
 						</header>
 						<p>
 							Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
@@ -359,8 +362,8 @@
 						<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved.</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Josué Girón. All rights reserved.</li>
+								<li> <a >benjamingiron1@gmail.com</a></li>
 							</ul>
 						</div>
 
@@ -372,7 +375,21 @@
 
 	</div>
 
+	<!-- Canvas effect -->
+	<img class="canvas" src="images/prueba.jpg" >
+	
+
+	<!-- The Modal -->
+	<div id="myModal" class="modal">
+	<span class="close">&times;</span>
+	<img class="modal-content" id="img01">
+	<div id="caption"></div>
+	</div>
+
 	<!-- Scripts -->
+
+	<script src="assets/js/canvas.js"></script>	
+	<script src="assets/js/modal.js"></script>	
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.dropotron.min.js"></script>
@@ -382,6 +399,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	
 	<script>
 		var isMobile = {
 			Android: function () {
