--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
 <head>
 	<title>Carabanchel 573</title>
 	<meta charset="utf-8">
-	<!--Para que el buscador encuentre tu descripion-->
-	<meta name="description" content="Carabanchel573, , carabanchel, Carabanchel, calle Carabanchel, apartamentos son apartamentos comodos, centricos en guatemala">
-	<!--Para buscadores-->
-	<meta name="keywords" content="Carabanchel 573, carabanchel, CARABANCHEL, 573, carabanchel apartamentos, aptsgt, apartamentos, Apartamentos, gratis, libres, comodos, guatemala">
-	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+	<!--Para que el buscador encuentre tu descripion-->
+	<meta name="description" content="¡Bienvenid@ a tu futuro hogar!
+	Carabanchel 573 es un complejo de apartamentos modernos, cómodos, e independientes. Con vista a los árboles, 2 ambientes, terraza y una comunidad de vecinos selecta.
+	Cerca de Burger King Roosvelt, acceso por Periferico, Aguilar Batres y Roosvelt. A 4 min de centro comercial miraflores y majadas. También cerca de Universidad San Carlos.
+	Ideal para profesionales o parejas jóvenes. Para poder ser aceptado en éste selecto complejo debes de llenar una aplicación. Escríbenos tu teléfono y tu correo para que te la enviemos.
+	Apartamentos en primero y segundo nivel con acceso privado, 2 ambientes, baño, y amueblado parcial.
+	Carabanchel573, carabanchel 573, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt">
+		<!--Para buscadores-->
+		<meta name="keywords" content="¡Bienvenid@ a tu futuro hogar!
+	Carabanchel 573 es un complejo de apartamentos modernos, cómodos, e independientes. Con vista a los árboles, 2 ambientes, terraza y una comunidad de vecinos selecta.
+	Cerca de Burger King Roosvelt, acceso por Periferico, Aguilar Batres y Roosvelt. A 4 min de centro comercial miraflores y majadas. También cerca de Universidad San Carlos.
+	Ideal para profesionales o parejas jóvenes. Para poder ser aceptado en éste selecto complejo debes de llenar una aplicación. Escríbenos tu teléfono y tu correo para que te la enviemos.
+	Apartamentos en primero y segundo nivel con acceso privado, 2 ambientes, baño, y amueblado parcial.
+	Carabanchel573, carabanchel 573, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt">
+	
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/canvas.css" />
 	<link rel="stylesheet" href="assets/css/modal.css" />
@@ -90,7 +101,7 @@
 				</article>
 
 				<article>
-					<a  class="image featured"><img src="images/pic04.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<a  class="image featured"><img src="images/pic04.jpg" id="myImg" onclick="modal(this)" alt="Parqueo enfrente" /></a>
 					<header>
 						<h3><a >Parqueo enfrente</a></h3>
 					</header>
@@ -106,7 +117,7 @@
 				</article>
 
 				<article>
-					<a  class="image featured"><img src="images/pic06.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<a  class="image featured"><img src="images/pic06.jpg" id="myImg" onclick="modal(this)" alt="Baño completo" /></a>
 					<header>
 						<h3><a >Baño completo</a></h3>
 					</header>
@@ -172,14 +183,13 @@
 		<!-- Ubication -->
 		<div id="ubication" class="wrapper style1">
 			<section id="features" class="container special" >
-				
 				<a href="#" class="image featured"  >
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1930.3320055803056!2d-90.5493462!3d14.6182061!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a1a30f206ae1%3A0xab70193d7e375f93!2sPulverizadora+Carabanchel+Zona+11!5e0!3m2!1ses-419!2sgt!4v1536208669524"
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15442.650821524017!2d-90.5492467!3d14.6182804!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf1daae7b6da19e88!2sApartamentos+Carabanchel+573!5e0!3m2!1ses!2sgt!4v1542049871146"
 					 width="100%" height="551" frameborder="0" onclick="modalMap(this)"> holi</iframe>
 				</a>
 
 				<header>
-						<h2><a href="https://goo.gl/maps/zoqiABwXoJn" target="_blank">Ubicación</a></h2>
+						<h2><a href="https://goo.gl/maps/24VvrWsxPc62" target="_blank">Ubicación</a></h2>
 						<p>
 							16 avenida 5-73 Zona 11, Ciudad Guatemala
 						</p>
