--- a/index.html
+++ b/index.html
@@ -206,9 +206,15 @@
 										<svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 1.2em; width: 1.2em; fill: currentcolor;">
 											<path d="m23.5 4h-1.5v-1.5c0-1.38-1.12-2.5-2.5-2.5h-15a2.5 2.5 0 0 0 -2.5 2.5v1.5h-1.5a.5.5 0 1 0 0 1h1.5v15.5c0 .83.67 1.5 1.5 1.5h1.5v.5c0 .83.67 1.5 1.5 1.5h14c .83 0 1.5-.67 1.5-1.5v-17.5h1.5a.5.5 0 0 0 0-1zm-20.5-1.5c0-.82.67-1.5 1.5-1.5h15.01c.82 0 1.49.67 1.49 1.5v1.5h-2v-.51a.5.5 0 0 1 .5-.49.5.5 0 0 0 0-1 1.5 1.5 0 0 0 -1.5 1.5v11.5h-15zm0 13.5h15v2h-15zm .5 5a .5.5 0 0 1 -.5-.5v-1.5h15v1.51c0 .27-.23.5-.5.5h-14zm17.5 1.5c0 .28-.22.5-.5.5h-14a .5.5 0 0 1 -.5-.5v-.5h11.5c.83 0 1.5-.67 1.5-1.5v-15.5h2z" fill-rule="evenodd"></path>										</svg>
 									</div>
+
+									<div style="margin-right:8px">
+										<svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 1.2em; width: 1.2em; fill: currentcolor;">
+											<path d="m23.5 4h-1.5v-1.5c0-1.38-1.12-2.5-2.5-2.5h-15a2.5 2.5 0 0 0 -2.5 2.5v1.5h-1.5a.5.5 0 1 0 0 1h1.5v15.5c0 .83.67 1.5 1.5 1.5h1.5v.5c0 .83.67 1.5 1.5 1.5h14c .83 0 1.5-.67 1.5-1.5v-17.5h1.5a.5.5 0 0 0 0-1zm-20.5-1.5c0-.82.67-1.5 1.5-1.5h15.01c.82 0 1.49.67 1.49 1.5v1.5h-2v-.51a.5.5 0 0 1 .5-.49.5.5 0 0 0 0-1 1.5 1.5 0 0 0 -1.5 1.5v11.5h-15zm0 13.5h15v2h-15zm .5 5a .5.5 0 0 1 -.5-.5v-1.5h15v1.51c0 .27-.23.5-.5.5h-14zm17.5 1.5c0 .28-.22.5-.5.5h-14a .5.5 0 0 1 -.5-.5v-.5h11.5c.83 0 1.5-.67 1.5-1.5v-15.5h2z" fill-rule="evenodd"></path>										</svg>
+									</div>
+
 							   </div>
-									<path d="m23.75 16.07-11.75-6.9v-1.23c1.08-.27 2-1.34 2-2.44a2.5 2.5 0 1 0 -5 0 .5.5 0 0 0 1 0 1.5 1.5 0 1 1 3 0c0 .72-.78 1.5-1.5 1.5a.5.5 0 0 0 -.5.5v1.77l-10.77 6.81a.48.48 0 0 0 -.23.41v.01c0 .26.19.51.5.51h23c .32 0 .51-.26.5-.52v-.01a.48.48 0 0 0 -.25-.41zm-21.52-.07 9.36-5.92 10.07 5.92z" fill-rule="evenodd"></path>
-									<div class="_ni9axhe">
+							   <path d="M1455 1008 c-91 -91 -129 -163 -122 -227 10 -88 97 -128 175 -81 32 20 32 20 65 0 77 -47 164 -7 174 81 4 36 0 56 -22 100 -28 54 -162 199 -185 199 -7 0 -45 -33 -85 -72z m162 -25 c133 -135 147 -261 32 -279 -26 -4 -43 0 -71 20 l-38 25 -37 -25 c-29 -20 -46 -24 -72 -20 -116 18 -101 147 33 280 36 36 70 66 76 66 6 0 40 -30 77 -67z"/>
+							   <div class="_ni9axhe">
 										<div class="_ncwphzu">Wifi</div>
 									</div>
 								</div>
