--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
 					</header>
 					<p>Ventanal hacia 16 avenida</p>
 				</article>
-
 				<article>
 					<a class="image featured"><img src="images/pic10.jpg" id="myImg" onclick="modal(this)" alt="Dos ambientes" /></a>
 					<header>
@@ -178,7 +177,7 @@
 		<!-- Info -->
 		<div id="info" class="wrapper style2">
 			<article id="Info" class="container special">
-				<a href="#" class="image featured"><iframe width="100%" height="551" src="https://www.youtube.com/embed/lDU9mnCvuoQ?controls=0&autoplay=0"
+				<a href="#" class="image featured"><iframe width="100%" height="551" src="https://www.youtube.com/embed/25OrYpBRVLQ?controls=0&autoplay=0"
 					 frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></a>
 				<header>
 					<h2><a href="#">Detalles de Renta</a></h2>
@@ -186,9 +185,9 @@
 
 				<section>
 					<div style="margin-bottom:16px">
-						<h2 tabindex="-1" class="_fecoyn4">
+						<h3 tabindex="-1" class="_fecoyn4">
 							<div class="_jnrahhr">Servicios</div>
-						</h2>
+						</h3>
 					</div>
 					<div class="_2h22gn">
 						<div class="_iq8x9is">
@@ -200,13 +199,19 @@
 												<path d="m12 0c-6.63 0-12 5.37-12 12s5.37 12 12 12 12-5.37 12-12-5.37-12-12-12zm0 23c-6.07 0-11-4.92-11-11s4.93-11 11-11 11 4.93 11 11-4.93 11-11 11zm .5-17h-4.5v11.5a.5.5 0 0 0 1 0v-4.5h3.5c1.93 0 3.5-1.57 3.5-3.5s-1.57-3.5-3.5-3.5zm0 6h-3.5v-5h3.5c1.38 0 2.5 1.12 2.5 2.5s-1.12 2.5-2.5 2.5z"
 												 fill-rule="evenodd"></path>
 											</svg></div>
+											<div class="_ni9axhe">
+													<div title="">Parqueo frente al complejo</div>
+												</div>
 									</div>
 									<div style="margin-right:8px">
 										<svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 1.2em; width: 1.2em; fill: currentcolor;">
 											<path d="m23.75 16.07-11.75-6.9v-1.23c1.08-.27 2-1.34 2-2.44a2.5 2.5 0 1 0 -5 0 .5.5 0 0 0 1 0 1.5 1.5 0 1 1 3 0c0 .72-.78 1.5-1.5 1.5a.5.5 0 0 0 -.5.5v1.77l-10.77 6.81a.48.48 0 0 0 -.23.41v.01c0 .26.19.51.5.51h23c .32 0 .51-.26.5-.52v-.01a.48.48 0 0 0 -.25-.41zm-21.52-.07 9.36-5.92 10.07 5.92z"
 											 fill-rule="evenodd"></path>
+											 <path d="m23.75 16.07-11.75-6.9v-1.23c1.08-.27 2-1.34 2-2.44a2.5 2.5 0 1 0 -5 0 .5.5 0 0 0 1 0 1.5 1.5 0 1 1 3 0c0 .72-.78 1.5-1.5 1.5a.5.5 0 0 0 -.5.5v1.77l-10.77 6.81a.48.48 0 0 0 -.23.41v.01c0 .26.19.51.5.51h23c .32 0 .51-.26.5-.52v-.01a.48.48 0 0 0 -.25-.41zm-21.52-.07 9.36-5.92 10.07 5.92z"
+											 fill-rule="evenodd"></path>
 										</svg>
 									</div>
+									<div class="_ni9axhe"><div style="margin-right:8px"><svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 1.2em; width: 1.2em; fill: currentcolor;"><path d="m17.5 17a .5.5 0 0 0 -.5.5v2.11c0 .22-.16.39-.33.39h-3.67v-15.03a.5.5 0 0 0 -.32-.47 477.53 477.53 0 0 0 -1.9-.73 737.69 737.69 0 0 0 -4.22-1.61l-.27-.1c-1.08-.4-2.03-.75-2.87-1.06h13.19c.22 0 .39.18.39.41v4.09a.5.5 0 0 0 1 0v-4.09c0-.78-.62-1.41-1.39-1.41h-16.11c-.02 0-.03.01-.05.01a.48.48 0 0 0 -.36.22c-.01.02-.03.04-.04.06a.49.49 0 0 0 -.05.21v17.8c0 .76.56 1.55 1.27 1.81l10.12 3.77c.85.32 1.62-.21 1.62-1.11v-1.77h3.67c.73 0 1.32-.63 1.32-1.39v-2.11a.5.5 0 0 0 -.5-.5zm-5.5 5.77c0 .2-.07.25-.27.18l-10.11-3.78c-.32-.12-.62-.54-.62-.88v-17.09c1.1.38 2.79 1 4.94 1.81l.27.1a738.69 738.69 0 0 1 5.79 2.21zm-2-11.27v3a .5.5 0 0 1 -1 0v-3a .5.5 0 1 1 1 0zm10-1.41v-.59a2.5 2.5 0 1 0 -5 0v .59a1.5 1.5 0 0 0 -1 1.41v3c0 .83.67 1.5 1.49 1.5h4.02a1.5 1.5 0 0 0 1.49-1.5v-3c0-.66-.42-1.21-1-1.41zm-4-.59a1.5 1.5 0 0 1 3 0v .5h-3zm4 5a .5.5 0 0 1 -.49.5h-4.02a.49.49 0 0 1 -.49-.5v-3a .5.5 0 0 1 .49-.5h4.02c.27 0 .49.22.49.5z" fill-rule="evenodd"></path></svg></div></div>
 									<div style="margin-right:8px">
 										<svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 1.2em; width: 1.2em; fill: currentcolor;">
 											<path d="m23.5 4h-1.5v-1.5c0-1.38-1.12-2.5-2.5-2.5h-15a2.5 2.5 0 0 0 -2.5 2.5v1.5h-1.5a.5.5 0 1 0 0 1h1.5v15.5c0 .83.67 1.5 1.5 1.5h1.5v.5c0 .83.67 1.5 1.5 1.5h14c .83 0 1.5-.67 1.5-1.5v-17.5h1.5a.5.5 0 0 0 0-1zm-20.5-1.5c0-.82.67-1.5 1.5-1.5h15.01c.82 0 1.49.67 1.49 1.5v1.5h-2v-.51a.5.5 0 0 1 .5-.49.5.5 0 0 0 0-1 1.5 1.5 0 0 0 -1.5 1.5v11.5h-15zm0 13.5h15v2h-15zm .5 5a .5.5 0 0 1 -.5-.5v-1.5h15v1.51c0 .27-.23.5-.5.5h-14zm17.5 1.5c0 .28-.22.5-.5.5h-14a .5.5 0 0 1 -.5-.5v-.5h11.5c.83 0 1.5-.67 1.5-1.5v-15.5h2z"
@@ -222,10 +227,18 @@
 									</div>
 
 								</div>
-								<path d="M1455 1008 c-91 -91 -129 -163 -122 -227 10 -88 97 -128 175 -81 32 20 32 20 65 0 77 -47 164 -7 174 81 4 36 0 56 -22 100 -28 54 -162 199 -185 199 -7 0 -45 -33 -85 -72z m162 -25 c133 -135 147 -261 32 -279 -26 -4 -43 0 -71 20 l-38 25 -37 -25 c-29 -20 -46 -24 -72 -20 -116 18 -101 147 33 280 36 36 70 66 76 66 6 0 40 -30 77 -67z" />
+								<div style="margin-right:8px">
+										<svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 1.2em; width: 1.2em; fill: currentcolor;">
+												<path d="m12 15a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm0 5a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm5.92-5.78a.5.5 0 1 1 -.84.55c-1.19-1.81-3.07-2.77-5.08-2.77s-3.89.96-5.08 2.78a.5.5 0 0 1 -.84-.55c1.38-2.1 3.58-3.23 5.92-3.23s4.54 1.13 5.92 3.23zm2.98-3.03a.5.5 0 1 1 -.79.61c-1.66-2.14-5.22-3.8-8.11-3.8-2.83 0-6.26 1.62-8.12 3.82a.5.5 0 0 1 -.76-.65c2.05-2.42 5.75-4.17 8.88-4.17 3.19 0 7.05 1.8 8.9 4.19zm2.95-2.33a.5.5 0 0 1 -.71-.02c-2.94-3.07-6.71-4.84-11.14-4.84s-8.2 1.77-11.14 4.85a.5.5 0 0 1 -.72-.69c3.12-3.27 7.14-5.16 11.86-5.16s8.74 1.89 11.86 5.16a.5.5 0 0 1 -.02.71z" fill-rule="evenodd"></path>								
+
+										</svg>
+									</div>
 								<div class="_ni9axhe">
-									<div class="_ncwphzu">Wifi</div>
+									<del aria-hidden="true" title="No incluye Wifi">Wifi</del>
 								</div>
+
+
+								
 							</div>
 
 						</div>
@@ -238,8 +251,8 @@
 											 fill-rule="evenodd"></path>
 										</svg></div>
 								</div>
-								<div class="_ni9axhe">
-									<div class="_ncwphzu">Cocina</div>
+								<div class="">
+									<div class="_ncwphzu">Area de cocina/comedor</div>
 								</div>
 							</div>
 						</div>
@@ -303,12 +316,7 @@
 						</div>
 					</div>
 		</div>
-		<div style="margin-top:8px">
-			<div class="_1n57hdr7"><button type="button" class="_1k01n3v1" aria-busy="false">Mostrar todos los 30 servicios</button></div>
-		</div>
-		<div style="margin-top:24px;margin-bottom:24px">
-			<div class="_1698ein"></div>
-		</div>
+		
 		</section>
 		</article>
 	</div>
@@ -449,8 +457,8 @@
 						<h3>Búscanos en:</h3>
 						<br>
 						<ul class="icons">
-							<li><a href="https://www.yotube.com" class="icon fa-facebook" target="_blank" title="Facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.facebook.com/groups/1531455613762738/permalink/2178103442431282/?sale_post_id=2178103442431282&rt=11" class="icon fa-youtube" target="_blank" title="YouTube"><span class="label" >YouTube</span></a></li>
+							<li><a href="https://www.facebook.com/groups/1531455613762738/permalink/2178103442431282/?sale_post_id=2178103442431282&rt=11" class="icon fa-facebook" target="_blank" title="Facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://youtu.be/25OrYpBRVLQ" class="icon fa-youtube" target="_blank" title="YouTube"><span class="label" >YouTube</span></a></li>
 							<li><a href="https://www.google.com.gt/search?q=carabanchel+573&oq=carabanchel+573&aqs=chrome..69i57j69i60l3j69i59.6395j1j7&sourceid=chrome&ie=UTF-8" class="icon fa-google" target="_blank" title="Google"><span class="label">Google</span></a></li>
 							<li><a href="https://www.google.com.gt/maps/place/Apartamentos+Carabanchel+573/@14.6182804,-90.5492467,15z/data=!4m2!3m1!1s0x0:0xf1daae7b6da19e88?ved=2ahUKEwji4svS_NXeAhWG1VkKHZNDDQ4Q_BIwCnoECAYQCA" class="icon fa-map" target="_blank" title="Google Maps" ><span class="label">Maps</span></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=50259176723" target="_blank" class="icon fa-whatsapp" title="+(502) 5917 - 6723"><span class="label">WhatsApp</span></a></li>
@@ -460,7 +468,7 @@
 					<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li><a href="mailto:benjamingiron1@gmail.com" target="_blank" title="Mail: benjamingiron1@gmail.com">&copy; All rights reserved - Josué Girón.</a></li>
+							<li><a href="mailto:benjamingiron1@gmail.com" target="_blank" title="Mail: benjamingiron1@gmail.com">&copy; All rights reserved - Josué Girón</a></li>
 							<li> <a href="https://github.com/josuegiron" target="_blank" class="icon fa-github" title="GitHub"> github.com/josuegiron</a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=50242463482" target="_blank"  class="icon fa-whatsapp" title="WhatsApp and Mobile Phone"> + 502 4246 - 3482</a></li>
 						</ul>
