Cambiar títulos para nueva pagina

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE HTML>
 <!--
-	Carabanchel 573
+	Apartamentos Roosevelt
 -->
 <html>
 
 <head>
-	<title>Carabanchel 573</title>
+	<title>Apartamentos Roosevelt</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 	<!--Para que el buscador encuentre tu descripion-->
 	<meta name="description" content="¡Bienvenid@ a tu futuro hogar!
-	Carabanchel 573 es un complejo de apartamentos modernos, cómodos, e independientes. Con vista a los árboles, 2 ambientes, terraza y una comunidad de vecinos selecta.
+	Apartamentos Roosevelt es un complejo de apartamentos modernos, cómodos, e independientes. Con vista a los árboles, 2 ambientes, terraza y una comunidad de vecinos selecta.
 	Cerca de Burger King Roosvelt, acceso por Periferico, Aguilar Batres y Roosvelt. A 4 min de centro comercial miraflores y majadas. También cerca de Universidad San Carlos.
 	Ideal para profesionales o parejas jóvenes. Para poder ser aceptado en éste selecto complejo debes de llenar una aplicación. Escríbenos tu teléfono y tu correo para que te la enviemos.
 	Apartamentos en primero y segundo nivel con acceso privado, 2 ambientes, baño, y amueblado parcial.
-	Carabanchel573, carabanchel 573, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt">
+	Carabanchel573, Apartamentos Roosevelt, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt">
 	<!--Para buscadores-->
 	<meta name="keywords" content="¡Bienvenid@ a tu futuro hogar!
-	Carabanchel 573 es un complejo de apartamentos modernos, cómodos, e independientes. Con vista a los árboles, 2 ambientes, terraza y una comunidad de vecinos selecta.
+	Apartamentos Roosevelt es un complejo de apartamentos modernos, cómodos, e independientes. Con vista a los árboles, 2 ambientes, terraza y una comunidad de vecinos selecta.
 	Cerca de Burger King Roosvelt, acceso por Periferico, Aguilar Batres y Roosvelt. A 4 min de centro comercial miraflores y majadas. También cerca de Universidad San Carlos.
 	Ideal para profesionales o parejas jóvenes. Para poder ser aceptado en éste selecto complejo debes de llenar una aplicación. Escríbenos tu teléfono y tu correo para que te la enviemos.
 	Apartamentos en primero y segundo nivel con acceso privado, 2 ambientes, baño, y amueblado parcial.
-	Carabanchel573, carabanchel 573, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt">
+	Carabanchel573, Apartamentos Roosevelt, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt">
 
 	<link rel="stylesheet" href="assets/css/modal.css" />
 	<link rel="stylesheet" href="assets/css/fonts.css">
@@ -339,7 +339,7 @@
 		<!-- Aplication -->
 		<div id="aplication" class="wrapper style2">
 			<section id="features" class="container special">
-				<a class="image featured" title="Atardecer desde Carabanchel 573...">
+				<a class="image featured" title="Atardecer desde Apartamentos Roosevelt...">
 					<img src="images/aplicar.jpg" width="100%" height="auto">
 				</a>
 
