--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	Carabanchel573, Apartamentos Roosevelt, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt">
 	<!--Para buscadores-->
 	<meta name="keywords" content="¡Bienvenid@ a tu futuro hogar!
+	Carabanchel573, Apartamentos Roosevelt, carabanchel, Carabanchel, calle Carabanchel, apartamentos, apartamentos comodos, centricos en guatemala, apartamentos comodos en guatemala, apartamentos en guatemala, apartamentos, lugares para vivir, parqueo, guatemala, guatemala carabanchel, apartamentos carabanchel, apartamentos en guatemala, guatemala apartamentos, apartamentos en zona 11, zona 11 apartamentos, apartamentos, apartamentos cerca de miraflores, miraflores, apartamentos cerca de la calzada roosevelt, roosevelt
 	Apartamentos Roosevelt es un complejo de apartamentos modernos, cómodos, e independientes. Con vista a los árboles, 2 ambientes, terraza y una comunidad de vecinos selecta.
 	Cerca de Burger King Roosvelt, acceso por Periferico, Aguilar Batres y Roosvelt. A 4 min de centro comercial miraflores y majadas. También cerca de Universidad San Carlos.
 	Ideal para profesionales o parejas jóvenes. Para poder ser aceptado en éste selecto complejo debes de llenar una aplicación. Escríbenos tu teléfono y tu correo para que te la enviemos.
@@ -44,7 +45,7 @@
 			<!-- Inner -->
 			<div class="inner">
 				<header>
-					<h1><a href="index.html" id="logo">Carabanchel - 573</a></h1>
+					<h1><a href="index.html" id="logo">Roosevelt</a></h1>
 					<hr />
 					<p>Para vivir con independencia y comodidad</p>
 				</header>
