Cambios en el header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="assets/css/fonts.css">
 	<link rel="stylesheet" href="assets/css/canvas.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"><!-- Iconos lineales -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
 	 crossorigin="anonymous">
 	<noscript>
@@ -203,11 +203,11 @@
 						</div>
 						<div class="service">
 							<div class="ico"><i class="fas fa-money-check-alt"></i></div>
-							<div class="desc">Deposito de Q2,100.00</div>
+							<div class="desc">Deposito de <b>Q1,900.00</b></div>
 						</div>
 						<div class="service">
 							<div class="ico"><i class="far fa-money-bill-alt"></i></div>
-							<div class="desc">Renta por mes Q2,100.00 + Servicios</div>
+							<div class="desc">Renta por mes <b>Q1,900.00</b> + Luz + Mantenimiento(<b>Q150.00</b>)</div>
 						</div>
 
 						<div class="service">
@@ -225,7 +225,7 @@
 						</header>
 						<div class="service">
 							<div class="ico"><span class="lnr lnr-drop"></span></i></div>
-							<div class="desc">Agua propia con sisterna</div>
+							<div class="desc">Agua sin costo</div>
 						</div>
 
 						<div class="service">
@@ -242,11 +242,15 @@
 						</div>
 						<div class="service">
 							<div class="ico"><i class="fas fa-parking"></i></span></div>
-							<div class="desc">Parqueo frente al complejo</div>
+							<div class="desc"><del aria-hidden="true">Parqueo de automóvil</del></div>
+						</div>
+						<div class="service">
+							<div class="ico"><i class="fas fa-motorcycle"></i></span></div>
+							<div class="desc">Parqueo de motos</div>
 						</div>
 						<div class="service">
 							<div class="ico"><i class="far fa-lightbulb"></i></span></div>
-							<div class="desc"><del aria-hidden="true">Energía eléctrica gratuita</del></div>
+							<div class="desc"><del aria-hidden="true">Energía eléctrica sin costo</del></div>
 						</div>
 						<div class="service">
 							<div class="ico"><i class="fas fa-chair"></i></div>
@@ -345,7 +349,7 @@
 				</a>
 
 				<header>
-					<h2>Iniciar proceso de aplicacion</h2>
+					<h2>Iniciar proceso de aplicación</h2>
 				</header>
 				<header>
 					<p>
@@ -450,7 +454,7 @@
 
 
 	<!-- Canvas effect -->
-	<img class="canvas" src="images/prueba.jpg">
+	<img class="canvas" src="images/header.png">
 
 
 	<!-- The Modal -->
