--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 			<div class="reel">
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic01.jpg" id="myImg" onclick="modal(this)" alt="Area de comedor/cocina Commodo" /></a>
+					<a class="image featured"><img src="images/pic01.jpg" id="myImg" onclick="modal(this)" alt="Area de comedor/cocina cómodo" /></a>
 					<header>
-						<h3><a>Area de comedor/cocina Commodo </a></h3>
+						<h3><a>Area de comedor/cocina cómodo </a></h3>
 					</header>
 					<p>Modernos acabados de cemento liso</p>
 
