--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		<!-- Info -->
 		<div id="info" class="wrapper style2">
 			<section id="Info" class="container special">
-				<a href="#" class="image featured"><iframe width="100%" height="551" src="https://www.youtube.com/embed/25OrYpBRVLQ?controls=0&autoplay=0"
+				<a href="#" class="image featured"><iframe width="100%" height="551" src="https://www.youtube.com/embed/LZGBCrOaStc?controls=0&autoplay=0"
 					 frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></a>
 				<header>
 					<h2><a>Detalles de Renta</a></h2>
